# shipProject

./: CMakeLists.txt  README.md  dockerfile_verifier  readme.txt
cmake/: CompilerSettings.cmake  ProjectBoost.cmake  ProjectCZmq.cmake  ProjectCaffeShip.cmake  ProjectCppNetlib.cmake  ProjectCurlpp.cmake  ProjectFaiss.cmake  ProjectNCCL.cmake  ProjectOpenssl.cmake  ProjectPistache.cmake  ProjectYolo.cmake  ProjectZmq.cmake
docker/: Dockerfile_base  Dockerfile_rest  Dockerfile_rest_base  Dockerfile_zmq_dealer  Dockerfile_zmq_dealer_base  Dockerfile_zmq_router  README.md  config.json  docker_compose_rest.yml  docker_compose_zmq.yml  dockerfile_verifier  entrypoint-router.sh  entrypoint.sh  router.json
docs/: .Doxyfile.in  API-zmq.md  API.md  Framework.vsdx  Git-LFS-usage.md  Performance.md  config.md  facedata.md  libSearchTool.md  nginx.md
eval/: darknet.py  readme.txt  sar.py  ship.py
eval/eval/: ship_eval.py  voc_eval.py
eval/names/: sar.names  yolo.names
eval/testData/: select_data.py
eval/testData/sar/: name_test.txt  test.txt
eval/testData/sar/Annotations/: 000004.xml  000005.xml  000007.xml  000011.xml  000013.xml  000024.xml  000030.xml
eval/testData/ship/: name_test.txt  test.txt
eval/testData/ship/Annotations/: 100000002_1.txt  100000011_1.txt  100000012.txt  100000013.txt  100000022.txt  100000023_1.txt
eval/testData/voc/: name_test.txt  test.txt
license/: license-key.lic
model/: README.md  sar.data  sar.prototxt  ship.prototxt  yolo.cfg  yolo.data
scripts/: README.md  install.sh  install_cuda.sh  install_deps.sh  install_runtime.sh  monitor.sh  pack.sh
scripts/license_monitor/: README.md  install.sh  monitor.sh  pack.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.h  configParams.cpp  configParams.h  error.h
src/libAlgorithm/: CMakeLists.txt  darknet.h  sar_detect.cpp  sar_detect.h  yolo_detect.cpp  yolo_detect.h
src/libAlgorithm/Ship/: CMakeLists.txt  ship_detect.cpp  ship_detect.h
src/libTaskModel/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  HandlerBase.cpp  HandlerBase.h  HandlerFactory.cpp  HandlerFactory.h  HandlerSAR.cpp  HandlerSAR.h  HandlerShip.cpp  HandlerShip.h  HandlerYolo.cpp  HandlerYolo.h  Queue.cpp  Queue.h
src/zmqServer/: CMakeLists.txt  ZmqDealer.cpp  ZmqMessage.h  ZmqRouter.cpp  ZmqSender.cpp  ZmqSender.h  ZmqServer.cpp  ZmqServer.h
test/: CMakeLists.txt  faceDataTest.cpp  uuidTest.cpp
test/cpp/rest/: CMakeLists.txt  README.md  caffePool.h  handler.cpp  handler.h  main.cpp  photoMessage.h  writer.cpp  writer.h
test/cpp/rest/scripts/: buildDynamic.sh  buildStatic.sh  genImageList.cpp  getList.py  getList.sh  reg30w.js  register.py  staticSearch.sh
test/cpp/zmq/: CMakeLists.txt  result.cpp  zmqclient.cpp
test/python/rest/: pistache-detect-markface.py  reg_all.py  request.py
test/python/rest/test-gender/: Female.txt  Male.txt  gender_test.py
test/python/zmq/: track-face.py  zmq-detect-markface.py
test/python/zmq/analysis/: README.md  analysis.py  correct.py  data.csv  dataset.py
tools/: CMakeLists.txt
tools/facedata/: exportFace.py  faceDataServer.py  monitorInfo.json  userInfo.json
tools/facedata/userManager/: userManager.py
tools/lockertool/: CMakeLists.txt  README.md  cmdline.h  lockerTool.cpp  modelEncrypt.cpp
tools/machineCode/: CMakeLists.txt  main.cpp
tools/modelEncrypt/: CMakeLists.txt
tools/rsa/: CMakeLists.txt  main.cpp  rsa.md
